<?xml version="1.0" encoding="utf-8"?>
    <!-- fragment_edit_name.xml -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/apply"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center" android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:inputType="textPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/firstname" />
    <EditText
        android:id="@+id/last_name"
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/lastname" />

    <EditText
        android:id="@+id/zipcode"
        android:inputType="number"
        android:maxLength="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/zipcode" />

    <EditText
        android:id="@+id/ssn"
        android:inputType="text"
        android:maxLength="11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/ssn" />

    <EditText
        android:id="@+id/amount"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/amount" />

    <Spinner
        android:id="@+id/term"
        android:layout_width="235dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:entries="@array/term"
        android:hint="@string/term"
        android:inputType="number" />

    </LinearLayout>
